@@ -40,7 +40,7 @@
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="#0000ff">&lt;!</font><font color="#0000ff">-- Regular SQL Relay Instance --</font><font color="#0000ff">&gt;</font><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="#008b8b">&lt;</font><font color="#008b8b">instance</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>id</b></font>=<font color="#ff00ff">&quot;example&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>enabled</b></font>=<font color="#ff00ff">&quot;yes&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>dbase</b></font>=<font color="#ff00ff">&quot;oracle&quot;</font><br>
 <font color="#008b8b">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font><font color="#2e8b57"><b>port</b></font>=<font color="#ff00ff">&quot;9000&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>socket</b></font>=<font color="#ff00ff">&quot;/tmp/example.socket&quot;</font><br>
-<font color="#008b8b">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font><font color="#2e8b57"><b>connections</b></font>=<font color="#ff00ff">&quot;3&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>maxconnections</b></font>=<font color="#ff00ff">&quot;15&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>maxqueuelength</b></font>=<font color="#ff00ff">&quot;5&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>growby</b></font>=<font color="#ff00ff">&quot;1&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>ttl</b></font>=<font color="#ff00ff">&quot;60&quot;</font><br>
+<font color="#008b8b">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font><font color="#2e8b57"><b>connections</b></font>=<font color="#ff00ff">&quot;3&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>maxconnections</b></font>=<font color="#ff00ff">&quot;15&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>maxqueuelength</b></font>=<font color="#ff00ff">&quot;5&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>growby</b></font>=<font color="#ff00ff">&quot;1&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>ttl</b></font>=<font color="#ff00ff">&quot;60&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>softttl</b></font>=<font color="#ff00ff">&quot;0&quot;</font><br>
 <font color="#008b8b">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font><font color="#2e8b57"><b>maxsessioncount</b></font>=<font color="#ff00ff">&quot;1000&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>endofsession</b></font>=<font color="#ff00ff">&quot;commit&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>sessiontimeout</b></font>=<font color="#ff00ff">&quot;600&quot;</font><br>
 <font color="#008b8b">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font><font color="#2e8b57"><b>runasuser</b></font>=<font color="#ff00ff">&quot;nobody&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>runasgroup</b></font>=<font color="#ff00ff">&quot;nobody&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>cursors</b></font>=<font color="#ff00ff">&quot;5&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>maxcursors</b></font>=<font color="#ff00ff">&quot;10&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>cursors_growby</b></font>=<font color="#ff00ff">&quot;1&quot;</font><br>
 <font color="#008b8b">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font><font color="#2e8b57"><b>authtier</b></font>=<font color="#ff00ff">&quot;connection&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>sessionhandler</b></font>=<font color="#ff00ff">&quot;process&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>handoff</b></font>=<font color="#ff00ff">&quot;pass&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>deniedips</b></font>=<font color="#ff00ff">&quot;&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>allowedips</b></font>=<font color="#ff00ff">&quot;&quot;</font><br>
@@ -160,8 +160,9 @@
 <li><b>maxconnections</b> - The maximum number of database connections to scale up to.  If this is set to a number lower than the value for the <b>connections</b> parameter then it will be automatically bumped up to the value set for <b>connections</b>.  Defaults to the same value as <b>connections</b>.</li>
 <li><b>maxqueuelength</b> - The size the queue of waiting clients has to grow to before more connections will be spawned.  Defaults to 0.</li>
 <li><b>growby</b> - The number of connections that will be started at a time when new connections are spawned.  Defaults to 1.</li>
-<li><b>ttl</b> - The number of seconds that an idle connection will stay alive after being spawned dynamically (does not apply to connections spawned by sqlr-start).  Defaults to 60 (one minute).</li>
-<li><b>maxsessioncount</b> - The number of client sessions that a connection will handle after being spawned dynamically before shutting down, even if it never goes idle.  Setting this to 0 will cause the connection to only shut down if it does idle for longer than <b>ttl</b> seconds.  This parameter does not apply to connections spawned by sqlr-start.  Defaults to 0.</li>
+<li><b>ttl</b> - The number of seconds that a dynamically spawned connection will sit idle, waiting for a client, before giving up and shutting down.  Setting this parameter to 0 causes each dynamically spawned connection to die immediately after handling one client session.  Defaults to 60 (one minute).</li>
+<li><b>softttl</b> - The total number of seconds that a dynamically spawned connection intends to live.  When the connection notices that it has been alive for this number of seconds, it voluntarily shuts down, but it only checks after each client session.  Thus, the connection will ignore this parameter until it has handled at least one client session, and it could live longer than this time if a client session takes a long time, or if it sits idle for a long time between client sessions.  Setting this parameter to 0 disables it.  Defaults to 0 (disabled).</li>
+<li><b>maxsessioncount</b> - The number of client sessions that a dynmically spawned connection will handle before voluntarily shutting down.  Setting this to 0 disables it.  Defaults to 0 (disabled).</li>
 <li><b>endofsession</b> - The command to issue when a client ends its session or dies.  Should be either "commit" or "rollback".  Defaults to "commit".</li>
 <li><b>sessiontimeout</b> - If a client leaves a session open for another client to pick up but no client picks it up, the session will time out after this number of seconds.  Defaults to 600 (10 minutes).</li>
 <li><b>runasuser</b> - The user to run the instance as.  Note that a configuration file must be readable by this user and the various "temp" directories (usually under /usr/local/firstworks/var/sqlrelay) must be writable by this user.  If this parameter is set to a user other than the user who runs sqlr-start, then unless sqlr-start is run as root, it will not be possible to switch to this user and the following warning will be displayed: <i>Warning: could not change user to <b>user</b>.</i>  Defaults to "nobody".</li>
