@@ -6,7 +6,7 @@
 	<!-- Regular SQL Relay Instance -->
 	<instance id="example" enabled="yes" dbase="oracle"
 		port="9000" socket="/tmp/example.socket"
-		connections="3" maxconnections="15" maxqueuelength="5" growby="1" ttl="60"
+		connections="3" maxconnections="15" maxqueuelength="5" growby="1" ttl="60" softttl="0"
 		maxsessioncount="1000" endofsession="commit" sessiontimeout="600"
 		runasuser="nobody" runasgroup="nobody" cursors="5" maxcursors="10" cursors_growby="1"
 		authtier="connection" sessionhandler="process" handoff="pass" deniedips="" allowedips=""
