@@ -9,7 +9,7 @@
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="#0000ff">&lt;!</font><font color="#0000ff">-- Regular SQL Relay Instance --</font><font color="#0000ff">&gt;</font><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="#008b8b">&lt;</font><font color="#008b8b">instance</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>id</b></font>=<font color="#ff00ff">&quot;example&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>enabled</b></font>=<font color="#ff00ff">&quot;yes&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>dbase</b></font>=<font color="#ff00ff">&quot;oracle&quot;</font><br>
 <font color="#008b8b">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font><font color="#2e8b57"><b>port</b></font>=<font color="#ff00ff">&quot;9000&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>socket</b></font>=<font color="#ff00ff">&quot;/tmp/example.socket&quot;</font><br>
-<font color="#008b8b">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font><font color="#2e8b57"><b>connections</b></font>=<font color="#ff00ff">&quot;3&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>maxconnections</b></font>=<font color="#ff00ff">&quot;15&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>maxqueuelength</b></font>=<font color="#ff00ff">&quot;5&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>growby</b></font>=<font color="#ff00ff">&quot;1&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>ttl</b></font>=<font color="#ff00ff">&quot;60&quot;</font><br>
+<font color="#008b8b">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font><font color="#2e8b57"><b>connections</b></font>=<font color="#ff00ff">&quot;3&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>maxconnections</b></font>=<font color="#ff00ff">&quot;15&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>maxqueuelength</b></font>=<font color="#ff00ff">&quot;5&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>growby</b></font>=<font color="#ff00ff">&quot;1&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>ttl</b></font>=<font color="#ff00ff">&quot;60&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>softttl</b></font>=<font color="#ff00ff">&quot;0&quot;</font><br>
 <font color="#008b8b">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font><font color="#2e8b57"><b>maxsessioncount</b></font>=<font color="#ff00ff">&quot;1000&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>endofsession</b></font>=<font color="#ff00ff">&quot;commit&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>sessiontimeout</b></font>=<font color="#ff00ff">&quot;600&quot;</font><br>
 <font color="#008b8b">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font><font color="#2e8b57"><b>runasuser</b></font>=<font color="#ff00ff">&quot;nobody&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>runasgroup</b></font>=<font color="#ff00ff">&quot;nobody&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>cursors</b></font>=<font color="#ff00ff">&quot;5&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>maxcursors</b></font>=<font color="#ff00ff">&quot;10&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>cursors_growby</b></font>=<font color="#ff00ff">&quot;1&quot;</font><br>
 <font color="#008b8b">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font><font color="#2e8b57"><b>authtier</b></font>=<font color="#ff00ff">&quot;connection&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>sessionhandler</b></font>=<font color="#ff00ff">&quot;process&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>handoff</b></font>=<font color="#ff00ff">&quot;pass&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>deniedips</b></font>=<font color="#ff00ff">&quot;&quot;</font><font color="#008b8b">&nbsp;</font><font color="#2e8b57"><b>allowedips</b></font>=<font color="#ff00ff">&quot;&quot;</font><br>
